# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.541 2006/01/29 14:42:17 rocket Exp $

  29 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  add grp/use to valid_values in the grp module

  29 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc27.

  28 Jan 2006; Eric Edgar <rocket@gentoo.org>
  -livecd/cdtar/yaboot-1.3.11-ppc-cdtar.tar.bz2,
  +livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2,
  targets/support/bootloader-setup.sh:
  ppc cdtar update; ppc64 bootloader updates

  27 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Fixing HFS bless on PPC64.  This is catalyst 2.0_rc26.

  27 Jan 2006; Eric Edgar <rocket@gentoo.org>
  +livecd/cdtar/yaboot-1.3.11-ppc-cdtar.tar.bz2,
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh,
  targets/support/create-iso.sh:
  Fix ppc64 iso creation.  Add console machine_type for ppc yaboot separation.

  27 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
  Add ppc console and  machine_type=ibm

  27 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix type error when kernel packages arent defined

  27 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/stage4_template.spec:
  Added more verbose wording and examples for pkgcache_path and
  kerncache_path, where necessary.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Really fixing bug #120475 this time.  This is 2.0_rc25.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh: